<resources>
    <string name="app_name">AndroidLab_1</string>
    <string name="hello_message">Hello World!</string>
    <string name="login_message">Login</string>
    <string name="password_message">password</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="dialog_message">Do you want to finish your activity?</string>
    <string name="dialog_title">Alert Dialog</string>
    <string name="ok">Here is my response</string>
    <string name="StartChat">Start chat</string>
    <string name="send">Send</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="outgoing_message">Outgoing Message</string>
    <string name="weather">Current weather</string>
    <string name="Current_temperature">Current temperature</string>
    <string name="Minimum_temperature">Minimum temperature</string>
    <string name="Maximum_temperature">Maximum temperature</string>
    <string name="normProgBar"></string>
    <string name="weatherButton">Check weather</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="ottawa"> Ottawa, ON </string>
    <string name="temperature"> temperature </string>
    <string name="temperature_min">minimum temperature </string>
    <string name="temperature_max">maximum temperature </string>

</resources>
