<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.esoukhanov.androidlab_1.StartActivity">
    <RelativeLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginTop="107dp"
            android:layout_toEndOf="@+id/button"
            android:text="@string/StartChat"
            tools:ignore="MissingConstraints" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weather"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_alignStart="@+id/button3" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
