<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/temp_min_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="37dp"
        android:text="Current temperature"/>

    <TextView
        android:id="@+id/temp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/temp_min_textView"
        android:layout_below="@+id/temp_min_textView"
        android:layout_marginTop="13dp"
        android:text="@string/Minimum_temperature" />







    <TextView
        android:id="@+id/temp_max_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/temp_min_textView"
        android:layout_below="@+id/temp_min_textView"
        android:layout_marginTop="23dp"
        android:text="@string/Maximum_temperature" />

    <ImageView
        android:id="@+id/weather_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_below="@id/temp_max_textView"
        android:contentDescription="@string/weather"
        android:src="?android:attr/colorFocusedHighlight" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_max_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="28dp"
        android:id="@+id/normProgBar"

        android:visibility="invisible"
        />
</RelativeLayout>